--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: View current projects
-      link: astro-site/general/projects/
+      link: general/projects/
       icon: right-arrow
       variant: primary
     - text: Discord server
