--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: dodoGames
 description: A whole website dedicated to my development stuff!
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: A whole website dedicated to my development stuff including codes i made!
   image:
     file: ../../assets/dodo.webp
   actions:
