Fixed banner not showing - 2.0.4

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -2,6 +2,10 @@
 title: dodoGames
 description: A whole website dedicated to my development stuff!
 template: splash
+banner:
+  content: |
+    For updates on what was added in this site
+    <a href="https://github.com/DodoGames7/astro-site/releases">Check out our changelogs.</a>
 hero:
   tagline: A whole website dedicated to my development stuff including codes i made!
   image:
