--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,8 +4,8 @@ description: A whole website dedicated to my development stuff!
 template: splash
 banner:
   content: |
-    For updates on what was added in this site
-    <a href="https://github.com/DodoGames7/astro-site/releases">Check out our changelogs.</a>
+    Site has been updated!
+    <a href="https://github.com/DodoGames7/astro-site/releases">Check out changelog</a>
 hero:
   tagline: A whole website dedicated to my development stuff including codes i made!
   image:
