--- a/src/content/docs/ar/index.mdx
+++ b/src/content/docs/ar/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: dodoGames
-description: موقع خاص بال مشاريع الخاصة بي
+description: موقع خاص بي للمشورعات التي اعمل عليها
 template: splash
 banner:
   content: |
@@ -9,7 +9,7 @@ banner:
 hero:
   tagline: A whole website dedicated to my development stuff including codes i made!
   image:
-    file: ../../assets/dodo.webp
+    file: ../../../assets/dodo.webp
   actions:
     - text: المشورعات الحالية
       link: general/projects/
