--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -9,7 +9,7 @@ banner:
 hero:
   tagline: A whole website dedicated to my development stuff including codes i made!
   image:
-    file: ../../assets/dodo.webp
+    file: ../../assets/dodogames.png
   actions:
     - text: View current projects
       link: general/projects/
