--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: dodoGames
-description: A whole website dedicated to my development stuff!
+description: A whole website just for aoi.js guides i made!
 template: splash
 banner:
   content: |
     Site has been updated!
     <a href="https://github.com/DodoGames7/astro-site/releases">Check out changelog</a>
 hero:
-  tagline: A whole website dedicated to my development stuff including codes i made!
+  tagline: A whole website just for aoi.js guides i made!
   image:
     file: ../../assets/dodogames.png
   actions:
