--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,8 +11,8 @@ hero:
   image:
     file: ../../assets/dodogames.png
   actions:
-    - text: View current projects
-      link: general/projects/
+    - text: Open documentation
+      link: home/introduction/
       icon: right-arrow
       variant: primary
     - text: Discord server
